setup server, config, env
